--- a/client/src/app/body/body.component.html
+++ b/client/src/app/body/body.component.html
@@ -1,5 +1,5 @@
 <div class="video-row">
-    <mat-card class="example-card" *ngFor="let movie of allMovies$ | async">
+    <mat-card class="example-card" *ngFor="let movie of filteredMovies | async">
 
         <img mat-card-image *ngIf="movie.poster" src="{{movie.poster}}" (error)="handleMissingImage($event)"
             alt="Photo of a Shiba Inu">
